--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"remark-gfm": "^4.0.0",
 		"remark-github": "^12.0.0",
 		"rehype-slug": "^6.0.0",
-		"sass": "^1.80.2",
+		"sass": "1.53.0",
 		"svelte": "^4.2.19",
 		"svelte-check": "^4.0.5",
 		"svelte-i18n": "4.0.0",
